# lula-music

./: .gitignore  CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: build-android.sh
src-tauri/src/: lib.rs  main.rs  playlist_io.rs  youtube.rs  ytmobile.rs
src/components/: AppLayout.tsx  ContextMenu.tsx  NowPlaying.tsx  PlayerBar.tsx  ProfileGate.tsx  PromptDialog.tsx  QueueList.tsx  Sidebar.tsx  SleepTimer.tsx  SongList.tsx  SongsScreen.tsx  Toaster.tsx  TrimControl.tsx  UpdateButton.tsx
src/lib/: api.ts  db.ts  format.ts  lyrics.ts  menus.ts  platform.ts  playlists.ts
src/pages/: Downloads.tsx  History.tsx  Home.tsx  Library.tsx  LikedSongs.tsx  PlaylistDetail.tsx  Search.tsx
src/store/: contextMenuStore.ts  libraryStore.ts  playerStore.ts  promptStore.ts  toastStore.ts  uiStore.ts
